Firefox layout bug

--- a/assets/styles/atomic/organisms/_search.scss
+++ b/assets/styles/atomic/organisms/_search.scss
@@ -1,3 +1,7 @@
+.cell-line-list {
+  clear: both;
+}
+
 .cell-line-filter {
 
   #filter {
